Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-128421

[Android] Recorder example is not able to record video

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: P2: Important P2: Important
    • 6.8.1, 6.9.0 FF
    • 6.8.0 Beta3, 6.8.0 RC
    • Multimedia
    • None
    • Android
    • 215b326cb (6.8.0), bc262f62f (dev), 31412cca3 (6.8)
    • 2024wk38s2FOQtforAndroid, 2024wk40s3FOQtforAndroid, 2024wk42s3FOQtforAndroid

      When I run the Recorder example on Android, pushing the record button shows an error message "Try again". It is, however, not possible to try again, and the record button is left in a 'recording' state.

      Tested with 6.8.0 Beta3, clang arm64-v8a, Samsung S6 lite, jdk-17.0.10.7-hotspot, NDK 26.1.10909125, SDK version 16

      I ACodec  : [OMX.Exynos.HEVC.Encoder] Now Executing
      D qt.multimedia.ffmpeg.videoencoder: : video codec opened 0 time base 1 / 30000
      D qt.multimedia.ffmpeg.videoencoder: : video source and encoder use different formats: 24 0 or sizes: QSize(3264, 2448) QSize(3264, 2448)
      D qt.multimedia.ffmpeg.videoencoder: : VideoFrameEncoder conversions initialized: sourceFormat: 24 (sw) targetFormat: 0 (sw) sourceSWFormat: 24 targetSWFormat: 0 converter: 0x74d6a138c0
      D qt.multimedia.ffmpeg.videoencoder: : found hw encoder hevc_mediacodec for id 173
      D qt.multimedia.ffmpeg.videoencoder: : VideoEncoder::init started video device thread.
      D qt.multimedia.ffmpeg.encoder: : Encoders initialized; writing a header
      D qt.multimedia.ffmpeg.encoder: : stream header is successfully written
      D qt.multimedia.ffmpeg.muxer: : Muxer::init started thread.
      D qt.multimedia.ffmpeg.videoencoder: : >>>> adjusting base time to -1920924664 -1920924664 0
      D qt.multimedia.ffmpeg.videoencoder: : >>> sending frame 0 0 -1920864788
      D qt.multimedia.ffmpeg.videoencoder: : sending frame 0 * 1 / 30000
      D qt.multimedia.ffmpeg.videoencoder: : >>> sending frame 1796 59876 -1920804935
      I GestureDetector: handleMessage TAP
      D qt.multimedia.ffmpeg.videoencoder: : sending frame 1796 * 1 / 30000
      D qt.multimedia.ffmpeg.videoencoder: : >>> sending frame 3592 119729 -1920745067
      D qt.multimedia.ffmpeg.videoencoder: : sending frame 3592 * 1 / 30000
      D qt.multimedia.ffmpeg.videoencoder: : >>> sending frame 5388 179597 -1920685208
      E ACodec  : [OMX.Exynos.HEVC.Encoder] ERROR(0x80001000)
      E ACodec  : signalError(omxError 0x80001000, internalError -2147483648)
      E MediaCodec: Codec reported err 0x80001000/-2147479552 (Unknown error 2147479552), actionCode 0, while in state 6/STARTED
      E ACodec  : [OMX.Exynos.HEVC.Encoder] ERROR(0x80001000)
      E ACodec  : signalError(omxError 0x80001000, internalError -2147483648)
      E MediaCodec: Codec reported err 0x80001000/-2147479552 (Unknown error 2147479552), actionCode 0, while in state 0/UNINITIALIZED
      D qt.multimedia.ffmpeg.videoencoder: : sending frame 5388 * 1 / 30000
      D qt.multimedia.ffmpeg.videoencoder: : error sending frame -542398533 "Generic error in an external library"
      D qt.multimedia.ffmpeg.videoencoder: : Error receiving packet -542398533 "Generic error in an external library"
      D qt.multimedia.ffmpeg.videoencoder: : >>> sending frame 7184 239456 -1920625341
      E ACodec  : [OMX.Exynos.HEVC.Encoder] ERROR(0x80001000)
      E ACodec  : signalError(omxError 0x80001000, internalError -2147483648)
      E MediaCodec: Codec reported err 0x80001000/-2147479552 (Unknown error 2147479552), actionCode 0, while in state 0/UNINITIALIZED
      D qt.multimedia.ffmpeg.videoencoder: : sending frame 7184 * 1 / 30000
      D qt.multimedia.ffmpeg.videoencoder: : error sending frame -11 "Try again"
      D qt.multimedia.ffmpeg.videoencoder: : Error receiving packet -542398533 "Generic error in an external library"
      D qt.multimedia.ffmpeg.videoencoder: : >>> sending frame 8980 299323 -1920565475
      D qt.multimedia.ffmpeg.videoencoder: : sending frame 8980 * 1 / 30000
      D qt.multimedia.ffmpeg.videoencoder: : error sending frame -11 "Try again"
      D qt.multimedia.ffmpeg.videoencoder: : Error receiving packet -542398533 "Generic error in an external library"
      D qt.multimedia.ffmpeg.videoencoder: : >>> sending frame 10776 359189 -1920505610
      D qt.multimedia.ffmpeg.videoencoder: : sending frame 10776 * 1 / 30000
      D qt.multimedia.ffmpeg.videoencoder: : error sending frame -11 "Try again"
      D qt.multimedia.ffmpeg.encoder: : stop
      D qt.multimedia.ffmpeg.encoder: : >>>>>>>>>>>>>>> finalize
      D qt.multimedia.ffmpeg.videoencoder: : Error receiving packet -542398533 "Generic error in an external library"
      D qt.multimedia.ffmpeg.videoencoder: : Error receiving packet -542398533 "Generic error in an external library"
      D qt.multimedia.ffmpeg.videoencoder: : Error receiving packet -542398533 "Generic error in an external library"
      D qt.multimedia.ffmpeg.videoencoder: : Error receiving packet -542398533 "Generic error in an external library"
      D qt.multimedia.ffmpeg.videoencoder: : Error receiving packet -542398533 "Generic error in an external library"
      D qt.multimedia.ffmpeg.videoencoder: : Error receiving packet -542398533 "Generic error in an external library"
      D qt.multimedia.ffmpeg.videoencoder: : Error receiving packet -542398533 "Generic error in an external library"
      D qt.multimedia.ffmpeg.videoencoder: : Error receiving packet -542398533 "Generic error in an external library"
      D qt.multimedia.ffmpeg.videoencoder: : Error receiving packet -542398533 "Generic error in an external library"
      D qt.multimedia.ffmpeg.videoencoder: : Error receiving packet -542398533 "Generic error in an external library"
      D qt.multimedia.ffmpeg.videoencoder: : Error receiving packet -542398533 "Generic error in an external library"
      D qt.multimedia.ffmpeg.videoencoder: : Error receiving packet -542398533 "Generic error in an external library"
      D qt.multimedia.ffmpeg.videoencoder: : Error receiving packet -542398533 "Generic error in an external library"
      D qt.multimedia.ffmpeg.videoencoder: : Error receiving packet -542398533 "Generic error in an external library" 

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            bartlomiejmoskal Bartlomiej Moskal
            johanseg Jøger Hansegård
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes