Tune calculateTargetSwFormatScore according to Android limittions

* we should consider bpp metric instead of depth[0].
  It doesn't make sense to compare depth[0] for different formats.
* add a prefference for NV12 on Android.

Fixes: QTBUG-128421
Change-Id: Ibb5534532b6a1ada10e4f4095e1063d5f5412331
Reviewed-by: Bartlomiej Moskal <bartlomiej.moskal@qt.io>
Reviewed-by: Pavel Dubsky <pavel.dubsky@qt.io>
Reviewed-by: Artem Dyomin <artem.dyomin@qt.io>
(cherry picked from commit bc262f62f8fec8d9f7e51cf5a5abfb991800e13c)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>